[@mantine/core] Fix z-index CSS variables not being exposed

--- a/packages/@mantine/core/src/core/MantineProvider/default-css-variables.css
+++ b/packages/@mantine/core/src/core/MantineProvider/default-css-variables.css
@@ -1,6 +1,12 @@
 /* stylelint-disable */
 /* This file is automatically generated, do not modify it directly. */
 :root {
+  --mantine-z-index-app: 100;
+  --mantine-z-index-modal: 200;
+  --mantine-z-index-popover: 300;
+  --mantine-z-index-overlay: 400;
+  --mantine-z-index-max: 9999;
+
   --mantine-scale: 1;
   --mantine-cursor-type: default;
   --mantine-webkit-font-smoothing: antialiased;
